syntax = "proto3";

package hero;

service HeroService {
  rpc UnaryCall (HeroById) returns (Hero);
  rpc ClientStreamAsObservable (stream HeroById) returns (Hero);
  rpc ServerStreamAsObservable (HeroById) returns (stream Hero);
  rpc BidirectionalStreamAsObservable (stream HeroById) returns (stream Hero);
  rpc saveFile (stream FileChunk) returns (FileResponse);
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}

message FileChunk {
  bytes data = 1;
}

message FileResponse {
  string message = 1;
}
